[package]
name = "music-control-rust"
description = "Music control for macOS Music.app"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true
opt-level = 3
strip = "symbols"
# panic = "abort"
lto = "fat"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"

regex = "1"

clap = { version = "4.0", features = ["derive", "cargo", "wrap_help"] }
clap-verbosity-flag = "2.0"

macos-accessibility-client = "0.0.1"
log = "0.4"

[dependencies.log4rs]
version = "1.1"
default-features = false
features = ["all_components", "pattern_encoder"]

[dependencies.rdev]
version = "0.5"

[build-dependencies]
build-target = "0.4"
